Tidy up some files